Report: "projet et thématique" finished

--- a/ST50_Docs/rapport/ST50_ROMETPierre.tex
+++ b/ST50_Docs/rapport/ST50_ROMETPierre.tex
@@ -3,7 +3,7 @@
 \usepackage[T1]{fontenc}
 %\Package paramétrage: marge horizontale à 2,5 cm, et la marge verticale à 1,5 cm.
 \usepackage{geometry}
-\geometry{hmargin=2.5cm,vmargin=3cm}
+\geometry{hmargin=2cm,vmargin=3cm}
 \usepackage{eso-pic}
 \usepackage{graphicx}
 \usepackage{float}
@@ -36,9 +36,10 @@
 
 
 \title{	Université de Technologie de Belfort-Montbéliard \\
-		{\large \textsc{Informatique, spécialisé dans les systèmes embarqués }} \\
+		{\large \textsc{Génie logiciel, spécialisé dans les systèmes embarqués }} \\
 		\vspace{1cm}
-		Contrôle Haptique et Asservissement de la Mécanique des Pianos de concert
+		Laboratoire de Physique Nucléaire et des Hautes Énergies \\
+		{\large \textsc{Contrôle Haptique et Asservissement de la Mécanique des Pianos de concert }}		
 	  }
 	  
 \date{5 Février 2018 -- 13 Juillet 2018 }
@@ -106,116 +107,89 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
 
   
   \chapter{Présentation du laboratoire}
-  Le LPNHE a été fondé par un groupe de chercheurs et enseignants-chercheurs issus de la division « hautes énergies » de l’institut de Physique Nucléaire (IPN) d’Orsay. En 1970, ces spécialistes des chambres à bulles rejoignent l’université Paris VI et l’ensemble devient un laboratoire associé au CNRS. A cette époque, la recherche s’y organise principalement autour d’expériences de chambres à bulles au CERN. Le LPNHE a donc derrière lui une longue histoire de collaboration avec le CERN. 
+  Le LPNHE a été fondé par un groupe de chercheurs et enseignants-chercheurs issus de la division « hautes énergies » de l’institut de Physique Nucléaire (IPN) d’Orsay. En 1970, ces spécialistes des chambres à bulles rejoignent l’université Paris VI, puis l’ensemble devient un laboratoire associé au CNRS. A cette époque, la recherche s’y organise principalement autour d’expériences de chambres à bulles au CERN. Le LPNHE a donc derrière lui une longue histoire de collaboration avec le CERN.\newline
   
-  Aujourd’hui encore, même si les expériences et projets dans lesquels est engagé le laboratoire se trouvent maintenant sur les cinq continents, le CERN reste l’endroit privilégié où les chercheurs de physique des particules du laboratoire effectuent leur recherche.
+  Aujourd’hui encore, même si les expériences et projets dans lesquels est engagé le laboratoire se trouvent maintenant sur les cinq continents, le CERN reste l’endroit privilégié où les chercheurs de physique des particules du laboratoire effectuent leur recherche.\newline
   
-  Le Laboratoire de Physique Nucléaire et des Hautes Énergies est une unité de recherche de l'institut National de Physique Nucléaire et de Physique des particules, institut du CRNS et des universités Sorbonne Université et Paris Diderot. Il est constitué de 12 groupes de recherche, de 3 services techniques (informatique, électronique, mécanique), et de deux services support étant l'administration et la logistique.
-  Le laboratoire est engagé dans plusieurs grands programmes expérimentaux, poursuivis dans le cadre de collaboration internationales auprès de très grandes infrastructures de recherche du monde entier, centre d'accélérateur de particules et observatoires.
+  Le Laboratoire de Physique Nucléaire et des Hautes Énergies est une unité de recherche de l'institut National de Physique Nucléaire et de Physique des particules, institut du CRNS et des universités Sorbonne Université et Paris Diderot. Il est constitué de 12 groupes de recherche, dont un à l’interface physique/biologie, de 3 services techniques (informatique, électronique, mécanique), et de deux services support étant l'administration et la logistique.\newline
+  
   Ces programmes couvrent les enjeux actuels de la physique des particules, des astroparticules, et de la cosmologie.
-  On retrouve une équipe constitué de:
+  On retrouve un groupe constitué de:
   \begin{itemize}
-  \item : 24 enseignant chercheurs
-  \item : 27 chercheurs
-  \item : 44 personnels d'appuis à la recherche
-  \item :	20 Doctorants
+  \item  24 enseignant chercheurs
+  \item  27 chercheurs
+  \item  44 personnels d'appuis à la recherche
+  \item  20 Doctorants
   \end{itemize}
   \newpage
   
   \section{Présentation des activités}
-  Le Laboratoire de physique nucléaire et des hautes énergies (LPNHE) est constitué de 12 groupes de recherche, dont un à l’interface physique/biologie, de 3 services techniques (informatique, électronique, mécanique), et de 2 services support (administration, logistique).
+  Le Laboratoire de physique nucléaire et des hautes énergies (LPNHE) est engagé dans plusieurs grands programmes expérimentaux, poursuivis dans le cadre de collaborations internationales auprès de très grandes infrastructures de recherche du monde entier, tel que des centres d’accélérateurs de particules, ainsi que des observatoires. Ces programmes couvrent les enjeux actuels de la physique des particules, des astroparticules, et de la cosmologie :
   
-  Le laboratoire est engagé dans plusieurs grands programmes expérimentaux, poursuivis dans le cadre de collaborations internationales auprès de très grandes infrastructures de recherche du monde entier, centres d’accélérateurs de particules et observatoires. Ces programmes couvrent les enjeux actuels de la physique des particules, des astroparticules, et de la cosmologie :
-  
+  On retrouve ainsi des travaux portant sûr:  
   \begin{itemize}
-  \item origine des masses et des familles de particules, recherche du boson de Higgs, unification des interactions fondamentales, recherche de la supersymétrie, dimensions supplémentaires de l’espace-temps : thèmes abordés par les expériences CDF et D0 auprès du Tevatron à Fermilab, et par des expériences auprès du Large Hadron Collider au CERN (ATLAS au LPNHE), et enjeux d’un futur collisionneur e+e- pour lequel le LPNHE est engagé dans le développement de détecteurs en silicium.
+  \item L'origine des masses et des familles de particules, recherche du boson de Higgs, unification des interactions fondamentales, recherche de la supersymétrie, dimensions supplémentaires de l’espace-temps : thèmes abordés par les expériences CDF et D0 auprès du Tevatron à Fermilab, et par des expériences auprès du Large Hadron Collider au CERN (ATLAS au LPNHE), et enjeux d’un futur collisionneur e+e- pour lequel le LPNHE est engagé dans le développement de détecteurs en silicium.
   
-  \item l’asymétrie matière-antimatière et la physique des saveurs lourdes : ce sont les sujets principaux des expériences BaBar au « SLAC National Laboratory », LHCb au CERN et la future SuperB factory en Italie.
+  \item L’asymétrie matière-antimatière et la physique des saveurs lourdes : ce sont les sujets principaux des expériences BaBar au « SLAC National Laboratory », LHCb au CERN et la future SuperB factory en Italie.
   
-  \item propriétés des neutrinos : participation à l’expérience Tokaï To Kamiokande (T2K) au Japon.
+  \item Les propriétés des neutrinos : participation à l’expérience Tokaï To Kamiokande (T2K) au Japon.
   
-  \item contenu énergétique de l’univers, matière noire et énergie noire : le groupe Cosmologie du LPNHE joue un rôle déterminant dans Supernovae Legacy Survey (SNLS) auprès du Canadian French Hawaï Telescope dans Supernovae Factory (SNF) et est engagé dans la préparation des projets futurs Large Synoptic Survey Telescope (LSST) et EUCLID.
+  \item Le contenu énergétique de l’univers, matière noire et énergie noire : le groupe Cosmologie du LPNHE joue un rôle déterminant dans Supernovae Legacy Survey (SNLS) auprès du Canadian French Hawaï Telescope dans Supernovae Factory (SNF) et est engagé dans la préparation des projets futurs Large Synoptic Survey Telescope (LSST) et EUCLID.
   
-  \item origine des rayons cosmiques de très haute énergie : rayons gamma au TeV pour l’observatoire HESS en Namibie, et rayons cosmiques d’ultra haute énergie (10**18 eV) pour l’observatoire AUGER en Argentine.
+  \item L'origine des rayons cosmiques de très haute énergie : rayons gamma au TeV pour l’observatoire HESS en Namibie, et rayons cosmiques d’ultra haute énergie (10**18 eV) pour l’observatoire AUGER en Argentine.
   \end{itemize}
   
-  Depuis la conception des expériences, en passant par l’étude et la réalisation des instruments de détection, la mise au point des systèmes de détection, d’acquisition et de réduction des données, la calibration et le monitorage des détecteurs pendant les longues périodes de prise de données, l’analyse et l’interprétation physique des mesures, pour enfin aboutir aux publications, c’est sur plusieurs années, parfois plus de dix ans, que s’étale le travail des équipes qui réunissent et développent des compétences extrêmement diversifiées en physique, électronique, informatique ou mécanique. Les théoriciens du LPNHE représentent une petite composante qui enrichit la vie scientifique du laboratoire. Le laboratoire est membre de la Fédération de Recherche sur les Interactions Fondamentales (FRIF) ce qui favorise un rapprochement plus fort théoriciens-expérimentateurs.
+  Depuis la conception des expériences, en passant par l’étude et la réalisation des instruments de détection, la mise au point des systèmes de détection, d’acquisition et de réduction des données, la calibration et le monitorage des détecteurs pendant les longues périodes de prise de données, l’analyse et l’interprétation physique des mesures, pour enfin aboutir aux publications.
+  Ce travail s'étale sur plusieurs années, parfois plus de dix ans, réunissant des équipes et développent des compétences extrêmement diversifiées en physique, électronique, informatique ou mécanique. 
+  Les théoriciens du LPNHE représentent une petite composante qui enrichit la vie scientifique du laboratoire, ainsi que de la Fédération de Recherche sur les Interactions Fondamentales (FRIF), dont le laboratoire est membre, ce qui favorise un rapprochement plus fort théoriciens-expérimentateurs.
+  
+  \newpage
   
   \section{Projet et thématique}
-  Voici quelques exemple quant aux thématique des projets sur lesquels les équipes sont engagés:
+  Voici quelques exemples de projets sur lesquels les équipes du laboratoire sont engagés:
   \begin{itemize}
-  \item PHYSIQUE DES PARTICULES Frontière en énergie
+  \item Physique des particules: Frontière en énergie
   
-  	Expériences Atlas au LHC (Cern)
+  	- L'expérience Atlas, au LHC (Cern), est l'un des deux détecteurs polyvalents du grand collisionneur de hadrons (LHC). Il étudie des domaines de de physique très variés, de la recherche du boson de higgs, aux dimensions supplémentaires de l'espace-temps, en passant par les particules qui pourraient former la matière noire.\newline
   	
-  	\hfill\hbox to 0pt{\hss\includegraphics[width=7cm]{ATLASLHC.jpg}\hss}\hfill\null\newline
-  	
- 	Expériences CDF et D0 (Fermilab)
-  	
-  	 \textsc{\begin{figure}[h]
-     \begin{minipage}[c]{.46\linewidth}
-         \centering
-         \includegraphics[width=7cm]{CDFLOGO.png}
-     \end{minipage}
-     \hfill%
-     \begin{minipage}[c]{.46\linewidth}
-         \centering
-         \includegraphics[width=7cm]{D0.jpg}
-     \end{minipage}
- 	\end{figure}}
-  	
-	R\&D en vue du Super LHC et pour un Futur collisionneur linéaire
+  	\hfill\hbox to 0pt{\hss\includegraphics[width=10cm]{ATLASLHC.jpg}\hss}\hfill\null\newline
+ 	
+ 	- L'expérience CDF pour "Collider Detector at Fermilab" met en jeux un accélérateur de particule, nommé le "Tevatron", faisant accélérer et se collisioner, des prontons ainsi que des antiprotons. 	Il à pour but d'observer et de découvrir l'identité ainsi que les propriétés des particules qui compose l'univers, et de comprendre les interactions entre ces dernières.
+ 	CDF est en particulier connue pour la d"couverte du "Quark Top" en 1994, confirmé par l'expérience "D0" l'année suivante.\newline
+ 	
+ 	\hfill\hbox to 0pt{\hss\includegraphics[width=11cm]{D0.jpg}\hss}\hfill\null\newline
+ 	
+ 	\newpage
+  
+  \item Physique des saveurs:
+ 
+	- "T2K" pour Tokai to Kamioka est une expérience de physique des particules situé au japon, dans laquelle collabore de nombreux pays. Il s'agit d'une expérience d'oscillation de neutrinos, mesurant un faisceau de neutrinos muoniques à courte (280 m) et longue distance (295 km). 
+	Le but principale de T2K est de mesurer l'oscillation des neutrinos muoniques en neutrinos électroniques afin de mesurer le derniers paramètre de la matrice "Pontecorvo-Maki-Nakagawa-Sakata" permettant d'expliquer l'oscillation deneutrinos prédite par Bruno Pontecorvo en 1957.\newline	
 	
-	\hfill\hbox to 0pt{\hss\includegraphics[width=7cm]{SLHC.jpg}\hss}\hfill\null\newline  	
-  
-  \item PHYSIQUE DES SAVEURS
-  
-  	Violation de symétrie CP : BaBar (Slac) et LHCb au LHC (Cern) 
-  	Étude des neutrinos : T2K
-  	PMPP (Phénoménologie et Modélisation en Physique des Particules)
-
+  	-"SLAC" ou "BABAR", est une expérience de physique des particules réalisé au Stanford Linear Accelerator Center. Elle est dédiée à létudes de la physique des mésons B et de la violation de la symétrie CP dans leur désintégration faibles.
+  	
   	\textsc{\begin{figure}[h]
      \begin{minipage}[c]{.46\linewidth}
          \centering
-         \includegraphics[width=7cm]{T2K.jpg}
+         \includegraphics[width=6cm]{T2K.jpg}
      \end{minipage}
      \hfill%
      \begin{minipage}[c]{.46\linewidth}
          \centering
          \includegraphics[width=7cm]{SLACBABAR.png}
      \end{minipage}
- 	\end{figure}}
-  	 
-  \item ASTROPARTICULES Rayons cosmiques de hautes énergies
+ 	\end{figure}} 	
   
-  	Photons de hautes énergies dans l’Univers : HESS, CTA
-  	Étude des rayons cosmiques aux énergies extrêmes : Observatoire Auger
-  	
-  	\textsc{\begin{figure}[h]
-     \begin{minipage}[c]{.46\linewidth}
-         \centering
-         \includegraphics[width=7cm]{hesscta.jpg}
-     \end{minipage}
-     \hfill%
-     \begin{minipage}[c]{.46\linewidth}
-         \centering
-         \includegraphics[width=7cm]{auger.jpg}
-     \end{minipage}
- 	\end{figure}}
- 	\newpage
+  \item Cosmologie:
   
-  \item Cosmologie
+  Le compréhension de la nature, de le matière et de l'énergie noires nécessite de mesurer les paramètres cosmologiques avec une précision de l'ordre du pourcent. Les mpyens à mettre en oeuvre pour atteindre cet objectif passent par l'échantillonnage de très grandes portions de l'univers visible. A cette fin, il faut non seulement pouvoir observer à grande distance, mais avec un dispositif à très grand champ.
   
-  	Supernovæ (SCP, SNF, SNLS) 
-  	LSST
-  	EUCLID
-  	DSA  
-  	
-  	\hfill\hbox to 0pt{\hss\includegraphics[width=7cm]{lsst.jpg}\hss}\hfill\null\newline
-  	
+  Pour cela, le projet au sol "LSST", vise à l'observation répétée de l'ensemble du ciel visible, en s'affranchissant d'une partie des effets instrumentaux et atmosphérique. Il est basé sur un télescope au sol de 8.4 mètres de diamètre équipé d'une caméra de 3.2 milliard de pixels. L'ensemble, implanté au Chili, couvrira un champ de 9.6 degrés-carrés sur le ciel balayé à la cadence d'un champ toutes les 40 secondes. Chaque champ sera ainsi visité 1000 fois durant les 10 ans de prise de données du programme.\newline
+    	
+  	\hfill\hbox to 0pt{\hss\includegraphics[width=8cm]{lsst.jpg}\hss}\hfill\null
   \end{itemize}
   
-  
+    
 %------------------------------------------------------------------
 %
 %	Présentation du projet "CHAMP"
