add plan projet

--- a/ST50_Docs/rapport/ST50_ROMETPierre.tex
+++ b/ST50_Docs/rapport/ST50_ROMETPierre.tex
@@ -258,7 +258,7 @@ Le poids d’enfoncement d’une touche de clavier est compris entre 45g et 60g,
   \section{Mécanique et Electronique}
 Nos premières réflexions sur la réalisation d’un système d’assistance et d’asservissement d’une mécanique de piano à queue démontrent qu’il faut faire appel à des technologies de pointe. Ce qui explique l’aspect novateur de notre projet. Par exemple, les contraintes mécaniques sur les moteurs susceptibles de seconder les doigts dans leur action sont nombreuses. Pour ne citer que les plus essentielles :\newline
 
-\hfill\hbox to 0pt{\hss\includegraphics[width=15cm]{MECA_PIANO2.png}\hss}\hfill\null\newline
+\hfill\hbox to 0pt{\hss\includegraphics[width=13cm]{MECA_PIANO2.png}\hss}\hfill\null\newline
 %figure 2 : Une mécanique de type Renner avec un modèle 3D de l’actuateur linéaire
 %envisagé (en noir posé sur la touche) pour donner l’échelle. L’actuateur peut être soit intégré
 %dans le sommier en tête de la mécanique sous la cuillère d’étouffoir ou bien positionné à
@@ -295,6 +295,7 @@ précise, si possible intégrée, fiable, puissante et programmable et fera donc
 
 Pour guider les idées, un schéma envisageable d’implémentation est proposé sur la figure 3. L’implémentation optimale nécessite bien-sûr une étude plus approfondie, il s’agit simplement ici de se de fixer les idées. Le moteur et les capteurs de positions sont représentés par les rectangles bleus ou rouges. Sur cette proposition, le rapport (R) entre l’action du moteur et celui du marteau est le même que pour le doigt de l’artiste soit environ 5,5. Les modifications apportées à la mécanique originale sont minimales. Avec un réglage approprié, la sensation
 de toucher sera adaptable aux désirs de l’artiste et restera très proche des sensations offertes par la mécanique à répétition et ce même si les marteaux sont lourds car le moteur accompagne en le soutenant le mouvement de la touche mais ne s’y substitue pas totalement.
+\newpage
 
   \section{Boucle d'asservissement}
 
